uri generating for LRA participants