@@ -5,29 +5,30 @@ import org.jboss.logging.Logger;
 import org.learn.lra.coreapi.Service;
 
 import javax.annotation.PostConstruct;
+import javax.ejb.Singleton;
 import javax.ejb.Stateless;
 import javax.inject.Inject;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
 
-@Stateless
-public class ServiceLocator {
+@Singleton
+public class ServicesLocator {
 
     private static final String SERVICE_PREFIX = "lra.service";
     private static final String HOST = "host";
     private static final String PORT = "port";
     private static final String PROTOCOL = "http";
 
-    private static final Logger log = Logger.getLogger(ServiceLocator.class);
+    private static final Logger log = Logger.getLogger(ServicesLocator.class);
 
     @Inject
     private Config config;
 
-    private Map<Service, URL> serviceLocations = new HashMap<>();
+    private Map<Service, URI> serviceLocations = new HashMap<>();
 
     @PostConstruct
     public void initConfig() {
@@ -37,10 +38,10 @@ public class ServiceLocator {
                     Optional<String> port = config.getOptionalValue(getPropertyName(service, PORT), String.class);
 
                     if (host.isPresent() && port.isPresent()) {
-                        URL url = generateUrl(host.get(), port.get());
-                        log.info("adding url " + url);
-                        if (url != null) {
-                            serviceLocations.put(service, url);
+                        URI uri = generateUrl(host.get(), port.get());
+                        log.info("adding url " + uri);
+                        if (uri!= null) {
+                            serviceLocations.put(service, uri);
                         }
                     } else {
                         log.warnf("Incomplete config information for service %s, missing host or port", service);
@@ -50,12 +51,12 @@ public class ServiceLocator {
         log.infof("Known service locations: %s", serviceLocations);
     }
 
-    private URL generateUrl(String host, String port) {
+    private URI generateUrl(String host, String port) {
         try {
             String url = String.format("%s://%s:%s", PROTOCOL, host, port);
-            return new URL(url);
-        } catch (MalformedURLException e) {
-            log.warn("Generated invalid URL", e);
+            return new URI(url);
+        } catch (URISyntaxException e) {
+            log.warn("Generated invalid URI", e);
         }
 
         return null;
@@ -63,6 +64,10 @@ public class ServiceLocator {
 
     private String getPropertyName(Service service, String suffix) {
         return String.format("%s.%s.%s", SERVICE_PREFIX, service.name().toLowerCase(), suffix);
+    }
+
+    public URI getServiceUri(Service service) {
+        return serviceLocations.get(service);
     }
 
 }
